corrected figcaption mobile view

--- a/styles/style.css
+++ b/styles/style.css
@@ -271,24 +271,31 @@ article{
     justify-content: center;
     margin-top: 50px;
     margin: 0 auto;
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
+/* #article2{
+    opacity: 0;
+    transition: opacity 1000ms, transform 1000ms;
+    transform: translateX(0px) translateY(0px);
+} */
 figure{
    margin: 0 auto;
+   width: 100%;
+   padding-top: 20px;
 }
 figcaption {
     padding-left: 35px;
     padding: 10px;
-    margin-left: 10px;
     font-family: 'Open Sans', sans-serif;
     font-size: 13px;
     font-weight: 600;
-    width: 310px;
+    width: 94%;
+    margin: 0 auto ;
     background: rgb(239, 239, 239);
 }
  #works {
-    width: 330px;
+    width: 100%;
     margin: 0 auto;
     display: block;
     padding-left: 10px;
@@ -304,7 +311,7 @@ figcaption {
     width: 100%;
    }
    figcaption {
-       width: 92%;
+     
    }
 }
 
@@ -317,6 +324,6 @@ figcaption {
      padding-top: 0;
     }
     figcaption {
-        width: 97.1%;
+        width: 96%;
     }
  }
